# identity_server

./: .env.template  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  admins.json.template  config.json.template  genesis.json.template  rebar.config
.github/: copilot-instructions.md
.github/workflows/: ci.yml
config/: sys.config
migrations/: 20240101000000_initial.sql
src/: admins.erl  config.rs  http_handler.erl  identity.erl  identity_server.app.src  identity_server.erl  identity_server_app.erl  identity_server_sup.erl  identity_signature.erl  lib.rs  main.rs  migration.rs  moderators.erl  notfound_handler.erl  numbers.rs  proof_handler.erl  storage.rs  vouch_handler.erl
src/admins/: db.rs  error.rs  mod.rs
src/dotenv/: dotenv.erl  dotenv_reader.erl
src/identity/: decay.rs  error.rs  forget.rs  genesis.rs  idt.rs  mod.rs  proof.rs  punish.rs  storage.rs  storage_db.rs  tree_walk.rs  vouch.rs
src/include/: args.hrl
src/logger/: app_logger.erl
src/routes/: admin.rs  forget.rs  idt.rs  mod.rs  proof.rs  punish.rs  vouch.rs
src/servers/: db.rs  error.rs  mod.rs  storage.rs
src/service_endpoints/: add_admin_handler.erl  add_moderator_handler.erl  admins_handler.erl  idt_handler.erl  is_admin_handler.erl  is_moderator_handler.erl  moderators_handler.erl  proof_handler.erl  punish_handler.erl  remove_admin_handler.erl  remove_moderator_handler.erl
src/state/: mod.rs
src/verify/: admin.rs  admins.rs  error.rs  forget.rs  mod.rs  moderator.rs  nonce.rs  (+7 more)
test/: penalty_test_SUITE.erl  vouch_test_SUITE.erl
tests/: nonce_db.rs  storage_db.rs
(+37 files in other folders)
