[package]
name = "identity_server"
version = "0.0.1"
description = "Identity and reputation graph service"
license-file = "LICENSE"
authors = []
edition = "2024"

rust-version = "1.85"

[dependencies]
log = { version = "0.4", features = ["std"] }
thiserror = "2"
env_logger = "0.11"
tide = "0.16"
async-std = { version = "1", features = ["attributes"] }
serde_json = "1"
dotenv = "0.15"
im = "15"
serde = "1"
ethers-core = "2"
ethers-signers = "2"
hex = "0.4"
async-trait = "0.1"
